# ForClaw

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  plan.md
agent-writer-backend/: Cargo.toml
agent-writer-backend/src/: agent_runtime.rs  agent_status.rs  api_integration_tests.rs  brain_service.rs  external_writing_db.rs  headless.rs  lib.rs  llm_runtime.rs  storage.rs  tests.rs
agent-writer-backend/src/brain_service/: functions_a_embedding.in.rs  functions_b_index.in.rs  functions_b_query.in.rs  functions_b_search.in.rs  types.in.rs
agent-writer-backend/src/chapter_generation/: context.in.rs  craft_prompt.rs  craft_quality.rs  craft_types.rs  draft_and_save.in.rs  mod.rs  runtime_artifacts.in.rs  settlement.in.rs  types_and_utils.in.rs
agent-writer-backend/src/chapter_generation/pipeline/: context.in.rs  main.in.rs  tests.in.rs
agent-writer-backend/src/commands/: generation.rs
agent-writer-backend/src/storage/: ops.in.rs  types.in.rs
agent-writer-backend/src/writer_agent/: anchor_carry.rs  inspector.rs  kernel.rs  memory.rs  mod.rs  project_intake.rs  provider_budget.rs  research_subtask.rs  run_preflight.rs  settlement_apply.rs  supervised_sprint.rs  task_receipt.rs  trajectory.rs  world_bible.rs
agent-writer-backend/src/writer_agent/context/: assembly.in.rs  seed.in.rs  types.in.rs
agent-writer-backend/src/writer_agent/diagnostics/: core.in.rs  helpers_tests.in.rs
agent-writer-backend/src/writer_agent/kernel/: ghost.rs  helpers.rs  prompts.rs  run_loop.rs  run_loop_ext.rs  (+1 more)
agent-writer-backend/tests/: writing_eval_test.rs
forge-agent-mcp/: Cargo.toml
forge-agent-mcp/src/: dispatch.rs  main.rs  main_trimmed.rs  tools.rs
forge-agent-mcp/tests/: smoke_test.rs
(+75 files in other folders)
